qbittorrentvpn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrentvpn
  labels:
    app.kubernetes.io/name: qbittorrentvpn
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "qbittorrentvpn.home.chaewon.io"
      secretName: "home-chaewon-io-wildcard"
  rules:
    - host: qbittorrentvpn.home.chaewon.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrentvpn
                port:
                  number: 8080
